# nuclear-physics-library

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  NuclearPhysicsConfig.cmake.in  README.md  nuclear-physics-library.pc.in
.github/workflows/: main.yml
c_interface/: CMakeLists.txt  reactor_solver.f90
core/: CMakeLists.txt  constants.f90  kinds.f90  numeric_utils.f90  rng.f90
examples/: RBMK-1000.c  bwr_simulator.c
include/: nuclear_physics.h
interface/: CMakeLists.txt  c_interface.f90
kernels/: CMakeLists.txt
kernels/linear_algebra/: dense_matrix.f90  eigen.f90  solve_linear.f90  sparse_matrix.f90
kernels/ode/: backward_euler.f90  dormand_prince.f90  rk4.f90
kernels/optimisation/: conjugate_newton.f90  constrained.f90  gradient_descent.f90  quasi_newton.f90
kernels/pde/: finite_difference.f90  finite_volume.f90  spectral.f90
models/: CMakeLists.txt  fluid_dynamics.f90  heat_transfer.f90  nuclear_fission.f90  pressure_dynamics.f90
tests/: CMakeLists.txt  test_suite.f90
